--- a/pages/order_detail/order_detail.wxml
+++ b/pages/order_detail/order_detail.wxml
@@ -124,7 +124,7 @@
                     <view class='good_monye'>
                         <view class='good_uite'>
                             <image src='{{member_grade_img}}' class='user_img'></image>
-                            <text class='uite'>￥{{item.goods_money}}/片</text>
+                            <text class='uite'>￥{{item.goods_money}}/{{item.unit}}</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
                     </view>
@@ -149,7 +149,7 @@
                     <view class='good_monye'>
                         <view class='good_uite'>
                             <image src='{{member_grade_img}}' class='user_img'></image>
-                            <text class='uite'>￥{{item.goods_money}}/片</text>
+                            <text class='uite'>￥{{item.goods_money}}/{{item.unit}}</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
                     </view>
@@ -174,7 +174,7 @@
                     <view class='good_monye'>
                         <view class='good_uite'>
                             <image src='{{member_grade_img}}' class='user_img'></image>
-                            <text class='uite'>￥{{item.goods_money}}/片</text>
+                            <text class='uite'>￥{{item.goods_money}}/{{item.unit}}</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
                     </view>
@@ -202,7 +202,7 @@
                     <view class='good_monye'>
                         <view class='good_uite'>
                             <image src='{{member_grade_img}}' class='user_img'></image>
-                            <text class='uite'>￥{{item.goods_money}}/片</text>
+                            <text class='uite'>￥{{item.goods_money}}/{{item.unit}}</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
                     </view>
@@ -232,7 +232,7 @@
                     <view class='good_monye'>
                         <view class='good_uite'>
                             <image src='{{member_grade_img}}' class='user_img'></image>
-                            <text class='uite'>￥{{item.goods_money}}/片</text>
+                            <text class='uite'>￥{{item.goods_money}}/{{item.unit}}</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
                     </view>
@@ -257,7 +257,7 @@
                     <view class='good_monye'>
                         <view class='good_uite'>
                             <image src='{{member_grade_img}}' class='user_img'></image>
-                            <text class='uite'>￥{{item.goods_money}}/片</text>
+                            <text class='uite'>￥{{item.goods_money}}/{{item.unit}}</text>
                         </view>
                         <view class='num'>x{{item.order_quantity}}</view>
                     
@@ -283,7 +283,7 @@
                     <view class='good_monye'>
                         <view class='good_uite'>
                             <image src='{{member_grade_img}}' class='user_img'></image>
-                            <text class='uite'>￥{{item.goods_money}}/片</text>
+                            <text class='uite'>￥{{item.goods_money}}/{{item.unit}}</text>
                         </view>
                     <view class='num'>x{{item.order_quantity}}</view>
                     </view>
