--- a/pages/storage/view/view.wxss
+++ b/pages/storage/view/view.wxss
@@ -70,6 +70,7 @@ swiper.swiper-container{height: 93%;}
 .btns button{ height: 70rpx; line-height: 70rpx;}
 .btns .out-storage{background-color: #00bbff; flex: 1; color: #fff;}
 .btns .renew{flex-basis: 30%; margin-left: 5px;}
+.btns .song{background-color:rgb(255,153,0);flex-basis: 30%;margin-right:5px;color:#fff;}
 /* 众筹 */
 .swiper-box{background-color: #000; box-sizing: border-box; height: 400rpx;}
 .swiper-box swiper{height: 160px;}
@@ -123,9 +124,10 @@ swiper.swiper-container{height: 93%;}
 .bd .num-view .minus{border-top-left-radius: 3px; border-bottom-left-radius: 3px;}
 .bd .num-view .plus{border-top-right-radius: 3px; border-bottom-right-radius: 3px;}
 .fd{background-color: #ebebeb; height: 50px; margin-top: 15px; display: flex; align-items: center; justify-content: space-between; border-bottom-left-radius: 8px; border-bottom-right-radius: 8px; overflow: hidden !important;}
+.fd-zs{background-color: #ebebeb; height: 50px; margin-top: 15px;border-bottom-left-radius: 8px; border-bottom-right-radius: 8px; overflow: hidden !important;}
 .fd .renew-cost{padding-left: 20px; color: #111;}
 .fd .renew-cost text{color: #821006;}
-.fd .renew-btn{background-color: #821006; text-align: center; color: #fff; line-height: 50px; padding: 0 10px;}
+.fd .renew-btn,.fd-zs .renew-btn{background-color: #821006; text-align: center; color: #fff; line-height: 50px; padding: 0 10px;}
 
 
 /* 支付密码css start */
