--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -57,11 +57,12 @@
       </swiper-item>
       <block wx:for="{{image}}" wx:key="{{index}}">
         <swiper-item class='swiper-item'>
-          <image src="{{item}}" class="slide-image" />
+        <image src="{{item}}" class="slide-image" />
         </swiper-item>
       </block>
     </swiper>
   </view>
+  <!-- <image src="data:image/png;base64,eyJlcnJjb2RlIjo0MDE2OSwiZXJybXNnIjoiaW52YWxpZCBsZW5ndGggZm9yIHNjZW5lLCBvciB0aGUgZGF0YSBpcyBub3QganNvbiBzdHJpbmcgaGludDogW0R4RVhNYTAwNTUxNTQzXSJ9" style="width:100rpx;height:100rpx;" /> -->
   <view class='purchasing' wx:if="{{goods.limit_condition== 1}}">
     <view style='font-size:35rpx;'>限时限购</view>
     <view class="aa">
