--- a/pages/storage/view/view.wxss
+++ b/pages/storage/view/view.wxss
@@ -108,7 +108,7 @@ swiper.swiper-container{height: 93%;}
 .right-project-info .project-price .check-project{border: 1px solid #D53109; color: #D53109; background-color: transparent;}
 
 /* 续费弹窗 */
-.renew-pop{position: absolute; top: 40%; left: 50%; width: 90%; min-height: 200px; background-color: #fff; border-radius: 8px; transform: translate(-50%, -50%);}
+.renew-pop{position: fixed; top: 40%; left: 50%; width: 90%; min-height: 200px; background-color: #fff; border-radius: 8px; transform: translate(-50%, -50%);}
 .renew-pop .renew-close{position: absolute; bottom: -50px; left: 50%; width: 30px; height: 30px; line-height: 22px; border: 2px solid #fff; color: #fff; border-radius: 50%;font-size: 28px; box-sizing: border-box; text-align: center; transform: translateX(-50%);}
 .bd{padding: 0 30px;}
 .bd .title{text-align: center; font-size: 20px; padding: 15px 0;}
@@ -117,14 +117,27 @@ swiper.swiper-container{height: 93%;}
 .bd .time-view .time-text{color: #949494;}
 .bd .renew-time .subtit-text{color: #821006; font-weight: 700;}
 .bd .renew-time .time-text{color: #821006;}
+.bd .renew-time .list-value{display: flex; align-items: center; color: #811006; font-weight: 700;}
+.bd .renew-time .list-value input{width: 50px; border: 1px solid #811006; border-radius: 3px; box-sizing: border-box;text-align: center; font-weight: normal;}
+.bd .renew-time .list-value button{font-size: 10px; color: #fff; background-color: #821006;}
 .bd .time-view, .bd .renew-time{display: flex; align-items: center; justify-content: space-between; padding: 5px 0;}
 .bd .num-view{display: flex; align-items: center;}
 .bd .num-view text{display: inline-block; width: 35px; height: 30px; line-height: 28px; border: 1px solid #ccc; box-sizing: border-box; text-align: center;}
 .bd .num-view input{border: 1px solid #ccc; border-left: 0; border-right: 0; width: 40px; height: 30px; box-sizing: border-box; text-align: center;}
 .bd .num-view .minus{border-top-left-radius: 3px; border-bottom-left-radius: 3px;}
 .bd .num-view .plus{border-top-right-radius: 3px; border-bottom-right-radius: 3px;}
+.bd .gift{line-height:35px;}
+.bd .gift .gift-title{color: rgb(112,107,128);}
+.bd .gift .gift-input{color: rgb(112,107,128);}
+.bd .gift .gift-input input, .bd .gift .gift-input textarea{background-color: #fff;}
+.bd .gift .gift-input .gift-unit{position: absolute;top: -14rpx; left: 190rpx;}
 .fd{background-color: #ebebeb; height: 50px; margin-top: 15px; display: flex; align-items: center; justify-content: space-between; border-bottom-left-radius: 8px; border-bottom-right-radius: 8px; overflow: hidden !important;}
 .fd-zs{background-color: #ebebeb; height: 50px; margin-top: 15px;border-bottom-left-radius: 8px; border-bottom-right-radius: 8px; overflow: hidden !important;}
+.fd-new{background-color: rgb(240,240,240) !important;display: flex;justify-content: space-around;align-items: center;border-top: 1px solid rgb(218,218,218);}
+.fd-new .fd-btn{width: 50%;height: 100%;line-height: 50px;text-align: center;}
+.fd-new .fd-reset{border-right: 1px solid rgb(218,218,218);font-weight: 700;}
+.fd-new .fd-give{color: rgb(255,153,0);position: relative;}
+.fd-new .fd-give button{position: absolute;width: 100%;height: 100%;opacity: 0;}
 .fd .renew-cost{padding-left: 20px; color: #111;}
 .fd .renew-cost text{color: #821006;}
 .fd .renew-btn,.fd-zs .renew-btn{background-color: #821006; text-align: center; color: #fff; line-height: 50px; padding: 0 10px;}
