--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -115,7 +115,7 @@
       </view>
     </view>
     <view class='other_info'>
-      <view class='freight'>运费：{{goods.goods_franking==0?'免费':goods.goods_franking}}</view>
+      <view class='freight'>运费：{{goods.goods_franking >= 0 ? (goods.goods_franking==0?'免费':goods.goods_franking) : '运费模板'}}</view>
       <view class='inventory' wx:if="{{goods.limit_goods == 0}}">
         库存{{goods.goods_repertory == '' || goods.goods_repertory == undefined ? goods.goods_standard[0].stock : goods.goods_repertory}}{{goods.unit}}
       </view>
