--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -98,7 +98,7 @@
                 </text>
                 <text>{{item.store_number[5]?item.store_number[5]:''}}</text>
               </view>
-              <text class="stock-more" bindtap="toStockDetail" data-id="{{item.id}}">详情></text>
+              <text class="stock-more" bindtap="toStockDetail" data-id="{{item.id}}" data-status="{{item.friend_status}}" data-goodsid="{{item.goods_id}}">详情></text>
             </view>
             <view class="exchange-price">
               <view>
@@ -111,7 +111,9 @@
               </view>
               <view>
                 <text>您的初始购入价：</text>
-                <text>￥{{item.goods_money}}/{{item.store_unit}}</text>
+                <text wx:if="{{item.friend_status == 0}}">￥{{item.goods_money}}/{{item.store_unit}}</text>
+                <text wx:elif="{{item.friend_status == 1}}">免费获赠</text>
+                <text wx:else>好友赠送</text>
               </view>
             </view>
             <view class="btns">
