--- a/sweep/pages/sweep_detail/sweep_detail.wxml
+++ b/sweep/pages/sweep_detail/sweep_detail.wxml
@@ -1,3 +1,4 @@
+<navBar back home navigationBarTitle="{{navigationBarTitle}}"></navBar>
 <view class="all">
   <view class="img_content">
     <image class="img" src="{{goods.goods_show_image == ''? 'https://teahouse.siring.cn/image1345901.png':goods.goods_show_image}}" mode="widthFix" lazy-load="false" binderror="" bindload="" />
