--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -52,11 +52,11 @@
             </view> -->
         <view class="enviroment-item" bindtap="checkRealTimeData">
           <image src="http://zhihuichacang.com/icon2.png" class="icon-temperature" />
-          <text class="temperature" style='color:#D9250E'>25.55°C</text>
+          <text class="temperature" style='color:#D9250E'>{{inTemp}}°C</text>
         </view>
         <view class="enviroment-item" bindtap="checkRealTimeData">
           <image src="http://zhihuichacang.com/u2173.png" class="icon-humidity" />
-          <text class="humidity" style='color:#669900'>78.99%</text>
+          <text class="humidity" style='color:#669900'>{{inHumi}}%</text>
         </view>
         <view>
           <view class="more" bindtap="checkRealTimeData">
