--- a/storage/pages/realtime_data/realtime_data.wxss
+++ b/storage/pages/realtime_data/realtime_data.wxss
@@ -16,7 +16,7 @@ swiper.swiper-container{min-height: 1020rpx; flex: 1;}
 .humidity{display: flex; align-items: center; justify-content: space-between; margin-top: 20rpx;}
 .humiture-data .humiture-title{color: #333;}
 .temp-echarts{position: relative; width: 700rpx; flex: 1; overflow-y: auto;}
-.temp-echarts text{position: absolute; left: 10px; top: 50%; transform: translateY(-50%); z-index: 9999; font-size: 12px; width: 20px; word-break: break-word;}
+.temp-echarts .text{position: absolute; left: 10px; top: 500rpx;  z-index: 9999; font-size: 12px; text-align: center; word-break: break-word;}
 .history-nav{display: flex; align-items: center; font-size: 28rpx; padding: 20rpx 10rpx; color: #93291f;}
 .history-nav .history-date{display: flex; height: 35px; box-sizing: border-box; border: 1px solid #93291f; border-radius: 6rpx; padding: 12rpx 6rpx; margin-left: 14rpx; width: 380rpx;}
 .history-nav .history-date .section{display: flex;}
@@ -26,4 +26,11 @@ swiper.swiper-container{min-height: 1020rpx; flex: 1;}
 .history-nav .history-btns view{display: inline-block; padding: 10rpx; text-align: center; background-color: transparent; border: 1px solid #93291f; border-radius: 4rpx; color: #93291f; margin-left: 10rpx; height: 100%; box-sizing: border-box; line-height: 24px;}
 .history-nav .history-btns view.on{background-color: #93291f; color: #fff;}
 
-
+.wd-line{background: linear-gradient(90deg, rgba(149, 242, 4, 1) -1%, rgba(75, 121, 2, 1) 97%);border-radius: 98px;height:18rpx;width:300rpx;margin: 0 20rpx;}
+.sd-line{ background: linear-gradient(90deg, rgba(247, 192, 85, 1) -1%, rgba(195, 111, 11, 1) 97%);border-radius: 98px;height:18rpx;width:300rpx;margin: 0 20rpx;}
+.tips{font-family: 'Arial Negreta', 'Arial Normal', 'Arial';font-weight: 700;font-style: normal;color: #70B603;font-size:22rpx;margin-top:30rpx;}
+.dialog{position: fixed;width: 100%;height: 100%;background-color: rgba(0, 0, 0, .5);z-index: 99999;}
+.dialog .close {color: #fff;border: 2px solid #fff;border-radius: 50%;width: 60rpx;height: 60rpx;text-align: center;line-height: 50rpx;margin: auto;font-size: 60rpx;}
+.dialog .dialog-box{width:660rpx;height:500rpx;background-color:#fff;border-radius:15rpx;margin: auto;margin-top: 320rpx;padding: 0 10rpx;  font-style: normal;  font-family: 'Arial Negreta', 'Arial Normal', 'Arial';}
+.dialog .dialog-box .main-title {font-weight: 700;font-size: 55rpx;text-align:center;color: #363636;margin: 20rpx 0;}
+.dialog .dialog-box .main-text {font-weight: 400;font-size: 35rpx;line-height:45rpx;color: #9C9999;text-align: center;}
