--- a/storage/pages/stock_detail/stock_detail.wxml
+++ b/storage/pages/stock_detail/stock_detail.wxml
@@ -88,8 +88,8 @@
         <view class="other-item">
             <view class="item-key">实时温湿度：</view>
             <view class="item-value">
-                <image src="./img/icon4.png" class="temperature" />25.55°C
-                <image src="./img/u2173.png" class="humidity" />78.35%
+                <image src="./img/icon4.png" class="temperature" />{{inTemp}}℃
+                <image src="./img/u2173.png" class="humidity" />{{inHumi}}%
                 <!-- <image src="./img/icon2.png" class="icon-more" /> -->
             </view>
         </view>
